<resources>
    <string name="app_name">Relia Point</string>
    <string name="by_clicking_quot_sign_up_quot_you_agree_with_our_tems_of_nusage_and_privacy_policy">By clicking \"Sign Up\" you agree with our Tems of\nUsage and Privacy Policy.</string>
    <string name="send">SEND</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="wecome">Wecome</string>
    <string name="please_enter_your_email_address_you_will_nreceive_a_link_to_create_a_new_password_nvia_email">Please enter your email address. You will\nreceive a link to create a new password\nvia email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_location">Search Locations</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="account_setting">Account Setting</string>
    <string name="push_notification">Push Notification</string>
    <string name="share_app">Share App</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="more">More</string>
    <string name="about_us">About Us</string>
    <string name="click_on_manage_subscription_to_change_cancel_or_upgrade_your_plan">Click on manage subscription to change, cancel, or upgrade your plan</string>
    <string name="you_are_subscribed_until_mar_02_2022">You are subscribed until Mar 02 2022</string>
    <string name="subscribe_monthly">SUBSCRIBE MONTHLY</string>
    <string name="all_subscription_include_access_to_the_reliable_points">-All subscription include access to the reliable points</string>
    <string name="all"> &#160;&#160;All</string>
    <string name="not_working_red_1star"> &#160;&#160;Not Working (Red/1 Star)</string>
    <string name="working_amber_2_star"> &#160;&#160;Working (Amber/2 Star)</string>
    <string name="working_well_green_3_star"> &#160;&#160;Working Well (Green/3 Star)</string>
    <string name="_7kw">7&#160;kw</string>
    <string name="_75kw">75&#160;kw</string>
    <string name="_150_kw">150+ kw</string>
    <string name="radius">Radius</string>
    <string name="power_type">Power Type</string>
    <string name="_10_miles">10 miles</string>
    <string name="_5_miles">5 miles</string>
    <string name="_0_miles">0 miles</string>
    <string name="please_rate">Please Rate</string>
    <string name="_7_kw">7 kw</string>
    <string name="todo">TODO</string>
    <string name="reliability">Reliability</string>
    <string name="admin">admin</string>
    <string name="device">device</string>
    <string name="logindate">loginDate</string>
    <string name="expirydate">expiryDate</string>
    <string name="full_name">full name</string>
    <string name="search_this_location">Search this location</string>
</resources>